Fix Expansion icon sticking out on the left on multiline titles

--- a/src/app/tree-shared/node-content/node-expansion-icon/node-expansion-icon.component.sass
+++ b/src/app/tree-shared/node-content/node-expansion-icon/node-expansion-icon.component.sass
@@ -1,6 +1,6 @@
 
 \:host
-  display: flex
+  display: block // looks like `display: flex` was causing incorrect shift-left on multiline titles; glitch in flexbox?
   align-items: stretch
 
 i
